feat: add regex domain search
